lab6_20210109/z/z/lab5(sysY)/1/src/main.output
Terminals unused in grammar

   T_BOOL
   ADD_ASSIGN
   SUB_ASSIGN
   MUL_ASSIGN
   DIV_ASSIGN
   EQ
   NOT_EQ
   LESS_THAN
   LESS_EQ
   MORE_THAN
   MORE_EQ
   AND
   OR
   SELF_ADD
   SELF_SUB
   DOT
   BOOL
   RETURN
   FOR
   WHILE
   IF
   ELSE
   ELSE_IF
   PRINTF
   SCANF
   b_OR
   b_NOR
   b_AND
   b_NOT
   pre_SELF_ADD
   pre_SELF_SUB
   GET_ADDRESS
   POINTER


状态 1 conflicts: 1 shift/reduce
状态 89 conflicts: 2 reduce/reduce


语法

    0 $accept: CompUnit $end

    1 CompUnit: Decl
    2         | Func_Def
    3         | CompUnit Decl
    4         | CompUnit Func_Def

    5 Decl: Const_Decl SEMICOLON
    6     | Var_Decl SEMICOLON

    7 Const_Decl: CONST BType Const_Def
    8           | Const_Decl COMMA Const_Def

    9 Const_Def: ID ASSIGN NUMBER
   10          | ID ASSIGN STRING

   11 Var_Decl: BType Var_Def
   12         | Var_Decl COMMA Var_Def

   13 Var_Def: ID ASSIGN Init_Val
   14        | ID

   15 Init_Val: Exp
   16         | LBRACE arr_element RBRACE

   17 arr_element: arr_ele
   18            | arr_element COMMA arr_ele

   19 arr_ele: INT_CONST
   20        | CHAR
   21        | STRING
   22        | Init_Val

   23 ID: IDENTIFIER
   24   | ID_ARRAY_NAME

   25 ID_ARRAY_NAME: IDENTIFIER LMPAREN INTEGER_DP RMPAREN
   26              | ID_ARRAY_NAME LMPAREN INTEGER_DP RMPAREN

   27 BType: T_INT
   28      | T_CHAR

   29 Func_Def: T_INT ID LPAREN Func_Params RPAREN Block
   30         | T_VOID ID LPAREN Func_Params RPAREN Block
   31         | T_INT MAIN LPAREN RPAREN Block
   32         | T_VOID MAIN LPAREN RPAREN Block

   33 Func_Params: Func_Param
   34            | Func_Params COMMA Func_Param
   35            | %empty

   36 Func_Param: BType ID

   37 Block: LBRACE Block_Item RBRACE

   38 Block_Item: base_Block_Item
   39           | Block_Item base_Block_Item

   40 base_Block_Item: Decl
   41                | Stmt

   42 Stmt: LVal ASSIGN Exp
   43     | Block

   44 PrimaryExp: LPAREN Exp RPAREN
   45           | LVal
   46           | NUMBER

   47 LVal: ID

   48 NUMBER: INT_CONST

   49 Exp: AddExp

   50 INT_CONST: INTEGER_H
   51          | INTEGER_D
   52          | INTEGER_O
   53          | INTEGER_B

   54 INTEGER_D: INTEGER_DP
   55          | INTEGER_DN

   56 UnaryExp: PrimaryExp
   57         | ADD UnaryExp
   58         | SUB UnaryExp
   59         | NOT UnaryExp

   60 MulExp: UnaryExp
   61       | MulExp MUL UnaryExp
   62       | MulExp DIV UnaryExp
   63       | MulExp MOD UnaryExp

   64 AddExp: MulExp
   65       | AddExp ADD MulExp
   66       | AddExp SUB MulExp


Terminals, with rules where they appear

$end (0) 0
error (256)
T_INT (258) 27 29 31
T_CHAR (259) 28
T_BOOL (260)
T_VOID (261) 30 32
CONST (262) 7
ASSIGN (263) 9 10 13 42
ADD_ASSIGN (264)
SUB_ASSIGN (265)
MUL_ASSIGN (266)
DIV_ASSIGN (267)
EQ (268)
NOT_EQ (269)
LESS_THAN (270)
LESS_EQ (271)
MORE_THAN (272)
MORE_EQ (273)
AND (274)
OR (275)
NOT (276) 59
ADD (277) 57 65
SUB (278) 58 66
MUL (279) 61
DIV (280) 62
MOD (281) 63
SELF_ADD (282)
SELF_SUB (283)
SEMICOLON (284) 5 6
COMMA (285) 8 12 18 34
DOT (286)
LPAREN (287) 29 30 31 32 44
RPAREN (288) 29 30 31 32 44
LBRACE (289) 16 37
RBRACE (290) 16 37
LMPAREN (291) 25 26
RMPAREN (292) 25 26
IDENTIFIER (293) 23 25
INTEGER_H (294) 50
INTEGER_DP (295) 25 26 54
INTEGER_DN (296) 55
INTEGER_O (297) 52
INTEGER_B (298) 53
CHAR (299) 20
BOOL (300)
STRING (301) 10 21
MAIN (302) 31 32
RETURN (303)
FOR (304)
WHILE (305)
IF (306)
ELSE (307)
ELSE_IF (308)
PRINTF (309)
SCANF (310)
b_OR (311)
b_NOR (312)
b_AND (313)
UMINUS (314)
b_NOT (315)
pre_SELF_ADD (316)
pre_SELF_SUB (317)
GET_ADDRESS (318)
POINTER (319)


Nonterminals, with rules where they appear

$accept (65)
    左： 0
CompUnit (66)
    左： 1 2 3 4, 右： 0 3 4
Decl (67)
    左： 5 6, 右： 1 3 40
Const_Decl (68)
    左： 7 8, 右： 5 8
Const_Def (69)
    左： 9 10, 右： 7 8
Var_Decl (70)
    左： 11 12, 右： 6 12
Var_Def (71)
    左： 13 14, 右： 11 12
Init_Val (72)
    左： 15 16, 右： 13 22
arr_element (73)
    左： 17 18, 右： 16 18
arr_ele (74)
    左： 19 20 21 22, 右： 17 18
ID (75)
    左： 23 24, 右： 9 10 13 14 29 30 36 47
ID_ARRAY_NAME (76)
    左： 25 26, 右： 24 26
BType (77)
    左： 27 28, 右： 7 11 36
Func_Def (78)
    左： 29 30 31 32, 右： 2 4
Func_Params (79)
    左： 33 34 35, 右： 29 30 34
Func_Param (80)
    左： 36, 右： 33 34
Block (81)
    左： 37, 右： 29 30 31 32 43
Block_Item (82)
    左： 38 39, 右： 37 39
base_Block_Item (83)
    左： 40 41, 右： 38 39
Stmt (84)
    左： 42 43, 右： 41
PrimaryExp (85)
    左： 44 45 46, 右： 56
LVal (86)
    左： 47, 右： 42 45
NUMBER (87)
    左： 48, 右： 9 46
Exp (88)
    左： 49, 右： 15 42 44
INT_CONST (89)
    左： 50 51 52 53, 右： 19 48
INTEGER_D (90)
    左： 54 55, 右： 51
UnaryExp (91)
    左： 56 57 58 59, 右： 57 58 59 60 61 62 63
MulExp (92)
    左： 60 61 62 63, 右： 61 62 63 64 65 66
AddExp (93)
    左： 64 65 66, 右： 49 65 66


State 0

    0 $accept: . CompUnit $end

    T_INT   shift, and go to state 1
    T_CHAR  shift, and go to state 2
    T_VOID  shift, and go to state 3
    CONST   shift, and go to state 4

    CompUnit    转到状态 5
    Decl        转到状态 6
    Const_Decl  转到状态 7
    Var_Decl    转到状态 8
    BType       转到状态 9
    Func_Def    转到状态 10


State 1

   27 BType: T_INT .
   29 Func_Def: T_INT . ID LPAREN Func_Params RPAREN Block
   31         | T_INT . MAIN LPAREN RPAREN Block

    IDENTIFIER  shift, and go to state 11
    MAIN        shift, and go to state 12

    IDENTIFIER  [reduce using rule 27 (BType)]

    ID             转到状态 13
    ID_ARRAY_NAME  转到状态 14


State 2

   28 BType: T_CHAR .

    $default  reduce using rule 28 (BType)


State 3

   30 Func_Def: T_VOID . ID LPAREN Func_Params RPAREN Block
   32         | T_VOID . MAIN LPAREN RPAREN Block

    IDENTIFIER  shift, and go to state 11
    MAIN        shift, and go to state 15

    ID             转到状态 16
    ID_ARRAY_NAME  转到状态 14


State 4

    7 Const_Decl: CONST . BType Const_Def

    T_INT   shift, and go to state 17
    T_CHAR  shift, and go to state 2

    BType  转到状态 18


State 5

    0 $accept: CompUnit . $end
    3 CompUnit: CompUnit . Decl
    4         | CompUnit . Func_Def

    $end    shift, and go to state 19
    T_INT   shift, and go to state 1
    T_CHAR  shift, and go to state 2
    T_VOID  shift, and go to state 3
    CONST   shift, and go to state 4

    Decl        转到状态 20
    Const_Decl  转到状态 7
    Var_Decl    转到状态 8
    BType       转到状态 9
    Func_Def    转到状态 21


State 6

    1 CompUnit: Decl .

    $default  reduce using rule 1 (CompUnit)


State 7

    5 Decl: Const_Decl . SEMICOLON
    8 Const_Decl: Const_Decl . COMMA Const_Def

    SEMICOLON  shift, and go to state 22
    COMMA      shift, and go to state 23


State 8

    6 Decl: Var_Decl . SEMICOLON
   12 Var_Decl: Var_Decl . COMMA Var_Def

    SEMICOLON  shift, and go to state 24
    COMMA      shift, and go to state 25


State 9

   11 Var_Decl: BType . Var_Def

    IDENTIFIER  shift, and go to state 11

    Var_Def        转到状态 26
    ID             转到状态 27
    ID_ARRAY_NAME  转到状态 14


State 10

    2 CompUnit: Func_Def .

    $default  reduce using rule 2 (CompUnit)


State 11

   23 ID: IDENTIFIER .
   25 ID_ARRAY_NAME: IDENTIFIER . LMPAREN INTEGER_DP RMPAREN

    LMPAREN  shift, and go to state 28

    $default  reduce using rule 23 (ID)


State 12

   31 Func_Def: T_INT MAIN . LPAREN RPAREN Block

    LPAREN  shift, and go to state 29


State 13

   29 Func_Def: T_INT ID . LPAREN Func_Params RPAREN Block

    LPAREN  shift, and go to state 30


State 14

   24 ID: ID_ARRAY_NAME .
   26 ID_ARRAY_NAME: ID_ARRAY_NAME . LMPAREN INTEGER_DP RMPAREN

    LMPAREN  shift, and go to state 31

    $default  reduce using rule 24 (ID)


State 15

   32 Func_Def: T_VOID MAIN . LPAREN RPAREN Block

    LPAREN  shift, and go to state 32


State 16

   30 Func_Def: T_VOID ID . LPAREN Func_Params RPAREN Block

    LPAREN  shift, and go to state 33


State 17

   27 BType: T_INT .

    $default  reduce using rule 27 (BType)


State 18

    7 Const_Decl: CONST BType . Const_Def

    IDENTIFIER  shift, and go to state 11

    Const_Def      转到状态 34
    ID             转到状态 35
    ID_ARRAY_NAME  转到状态 14


State 19

    0 $accept: CompUnit $end .

    $default  接受


State 20

    3 CompUnit: CompUnit Decl .

    $default  reduce using rule 3 (CompUnit)


State 21

    4 CompUnit: CompUnit Func_Def .

    $default  reduce using rule 4 (CompUnit)


State 22

    5 Decl: Const_Decl SEMICOLON .

    $default  reduce using rule 5 (Decl)


State 23

    8 Const_Decl: Const_Decl COMMA . Const_Def

    IDENTIFIER  shift, and go to state 11

    Const_Def      转到状态 36
    ID             转到状态 35
    ID_ARRAY_NAME  转到状态 14


State 24

    6 Decl: Var_Decl SEMICOLON .

    $default  reduce using rule 6 (Decl)


State 25

   12 Var_Decl: Var_Decl COMMA . Var_Def

    IDENTIFIER  shift, and go to state 11

    Var_Def        转到状态 37
    ID             转到状态 27
    ID_ARRAY_NAME  转到状态 14


State 26

   11 Var_Decl: BType Var_Def .

    $default  reduce using rule 11 (Var_Decl)


State 27

   13 Var_Def: ID . ASSIGN Init_Val
   14        | ID .

    ASSIGN  shift, and go to state 38

    $default  reduce using rule 14 (Var_Def)


State 28

   25 ID_ARRAY_NAME: IDENTIFIER LMPAREN . INTEGER_DP RMPAREN

    INTEGER_DP  shift, and go to state 39


State 29

   31 Func_Def: T_INT MAIN LPAREN . RPAREN Block

    RPAREN  shift, and go to state 40


State 30

   29 Func_Def: T_INT ID LPAREN . Func_Params RPAREN Block

    T_INT   shift, and go to state 17
    T_CHAR  shift, and go to state 2

    $default  reduce using rule 35 (Func_Params)

    BType        转到状态 41
    Func_Params  转到状态 42
    Func_Param   转到状态 43


State 31

   26 ID_ARRAY_NAME: ID_ARRAY_NAME LMPAREN . INTEGER_DP RMPAREN

    INTEGER_DP  shift, and go to state 44


State 32

   32 Func_Def: T_VOID MAIN LPAREN . RPAREN Block

    RPAREN  shift, and go to state 45


State 33

   30 Func_Def: T_VOID ID LPAREN . Func_Params RPAREN Block

    T_INT   shift, and go to state 17
    T_CHAR  shift, and go to state 2

    $default  reduce using rule 35 (Func_Params)

    BType        转到状态 41
    Func_Params  转到状态 46
    Func_Param   转到状态 43


State 34

    7 Const_Decl: CONST BType Const_Def .

    $default  reduce using rule 7 (Const_Decl)


State 35

    9 Const_Def: ID . ASSIGN NUMBER
   10          | ID . ASSIGN STRING

    ASSIGN  shift, and go to state 47


State 36

    8 Const_Decl: Const_Decl COMMA Const_Def .

    $default  reduce using rule 8 (Const_Decl)


State 37

   12 Var_Decl: Var_Decl COMMA Var_Def .

    $default  reduce using rule 12 (Var_Decl)


State 38

   13 Var_Def: ID ASSIGN . Init_Val

    NOT         shift, and go to state 48
    ADD         shift, and go to state 49
    SUB         shift, and go to state 50
    LPAREN      shift, and go to state 51
    LBRACE      shift, and go to state 52
    IDENTIFIER  shift, and go to state 11
    INTEGER_H   shift, and go to state 53
    INTEGER_DP  shift, and go to state 54
    INTEGER_DN  shift, and go to state 55
    INTEGER_O   shift, and go to state 56
    INTEGER_B   shift, and go to state 57

    Init_Val       转到状态 58
    ID             转到状态 59
    ID_ARRAY_NAME  转到状态 14
    PrimaryExp     转到状态 60
    LVal           转到状态 61
    NUMBER         转到状态 62
    Exp            转到状态 63
    INT_CONST      转到状态 64
    INTEGER_D      转到状态 65
    UnaryExp       转到状态 66
    MulExp         转到状态 67
    AddExp         转到状态 68


State 39

   25 ID_ARRAY_NAME: IDENTIFIER LMPAREN INTEGER_DP . RMPAREN

    RMPAREN  shift, and go to state 69


State 40

   31 Func_Def: T_INT MAIN LPAREN RPAREN . Block

    LBRACE  shift, and go to state 70

    Block  转到状态 71


State 41

   36 Func_Param: BType . ID

    IDENTIFIER  shift, and go to state 11

    ID             转到状态 72
    ID_ARRAY_NAME  转到状态 14


State 42

   29 Func_Def: T_INT ID LPAREN Func_Params . RPAREN Block
   34 Func_Params: Func_Params . COMMA Func_Param

    COMMA   shift, and go to state 73
    RPAREN  shift, and go to state 74


State 43

   33 Func_Params: Func_Param .

    $default  reduce using rule 33 (Func_Params)


State 44

   26 ID_ARRAY_NAME: ID_ARRAY_NAME LMPAREN INTEGER_DP . RMPAREN

    RMPAREN  shift, and go to state 75


State 45

   32 Func_Def: T_VOID MAIN LPAREN RPAREN . Block

    LBRACE  shift, and go to state 70

    Block  转到状态 76


State 46

   30 Func_Def: T_VOID ID LPAREN Func_Params . RPAREN Block
   34 Func_Params: Func_Params . COMMA Func_Param

    COMMA   shift, and go to state 73
    RPAREN  shift, and go to state 77


State 47

    9 Const_Def: ID ASSIGN . NUMBER
   10          | ID ASSIGN . STRING

    INTEGER_H   shift, and go to state 53
    INTEGER_DP  shift, and go to state 54
    INTEGER_DN  shift, and go to state 55
    INTEGER_O   shift, and go to state 56
    INTEGER_B   shift, and go to state 57
    STRING      shift, and go to state 78

    NUMBER     转到状态 79
    INT_CONST  转到状态 64
    INTEGER_D  转到状态 65


State 48

   59 UnaryExp: NOT . UnaryExp

    NOT         shift, and go to state 48
    ADD         shift, and go to state 49
    SUB         shift, and go to state 50
    LPAREN      shift, and go to state 51
    IDENTIFIER  shift, and go to state 11
    INTEGER_H   shift, and go to state 53
    INTEGER_DP  shift, and go to state 54
    INTEGER_DN  shift, and go to state 55
    INTEGER_O   shift, and go to state 56
    INTEGER_B   shift, and go to state 57

    ID             转到状态 59
    ID_ARRAY_NAME  转到状态 14
    PrimaryExp     转到状态 60
    LVal           转到状态 61
    NUMBER         转到状态 62
    INT_CONST      转到状态 64
    INTEGER_D      转到状态 65
    UnaryExp       转到状态 80


State 49

   57 UnaryExp: ADD . UnaryExp

    NOT         shift, and go to state 48
    ADD         shift, and go to state 49
    SUB         shift, and go to state 50
    LPAREN      shift, and go to state 51
    IDENTIFIER  shift, and go to state 11
    INTEGER_H   shift, and go to state 53
    INTEGER_DP  shift, and go to state 54
    INTEGER_DN  shift, and go to state 55
    INTEGER_O   shift, and go to state 56
    INTEGER_B   shift, and go to state 57

    ID             转到状态 59
    ID_ARRAY_NAME  转到状态 14
    PrimaryExp     转到状态 60
    LVal           转到状态 61
    NUMBER         转到状态 62
    INT_CONST      转到状态 64
    INTEGER_D      转到状态 65
    UnaryExp       转到状态 81


State 50

   58 UnaryExp: SUB . UnaryExp

    NOT         shift, and go to state 48
    ADD         shift, and go to state 49
    SUB         shift, and go to state 50
    LPAREN      shift, and go to state 51
    IDENTIFIER  shift, and go to state 11
    INTEGER_H   shift, and go to state 53
    INTEGER_DP  shift, and go to state 54
    INTEGER_DN  shift, and go to state 55
    INTEGER_O   shift, and go to state 56
    INTEGER_B   shift, and go to state 57

    ID             转到状态 59
    ID_ARRAY_NAME  转到状态 14
    PrimaryExp     转到状态 60
    LVal           转到状态 61
    NUMBER         转到状态 62
    INT_CONST      转到状态 64
    INTEGER_D      转到状态 65
    UnaryExp       转到状态 82


State 51

   44 PrimaryExp: LPAREN . Exp RPAREN

    NOT         shift, and go to state 48
    ADD         shift, and go to state 49
    SUB         shift, and go to state 50
    LPAREN      shift, and go to state 51
    IDENTIFIER  shift, and go to state 11
    INTEGER_H   shift, and go to state 53
    INTEGER_DP  shift, and go to state 54
    INTEGER_DN  shift, and go to state 55
    INTEGER_O   shift, and go to state 56
    INTEGER_B   shift, and go to state 57

    ID             转到状态 59
    ID_ARRAY_NAME  转到状态 14
    PrimaryExp     转到状态 60
    LVal           转到状态 61
    NUMBER         转到状态 62
    Exp            转到状态 83
    INT_CONST      转到状态 64
    INTEGER_D      转到状态 65
    UnaryExp       转到状态 66
    MulExp         转到状态 67
    AddExp         转到状态 68


State 52

   16 Init_Val: LBRACE . arr_element RBRACE

    NOT         shift, and go to state 48
    ADD         shift, and go to state 49
    SUB         shift, and go to state 50
    LPAREN      shift, and go to state 51
    LBRACE      shift, and go to state 52
    IDENTIFIER  shift, and go to state 11
    INTEGER_H   shift, and go to state 53
    INTEGER_DP  shift, and go to state 54
    INTEGER_DN  shift, and go to state 55
    INTEGER_O   shift, and go to state 56
    INTEGER_B   shift, and go to state 57
    CHAR        shift, and go to state 84
    STRING      shift, and go to state 85

    Init_Val       转到状态 86
    arr_element    转到状态 87
    arr_ele        转到状态 88
    ID             转到状态 59
    ID_ARRAY_NAME  转到状态 14
    PrimaryExp     转到状态 60
    LVal           转到状态 61
    NUMBER         转到状态 62
    Exp            转到状态 63
    INT_CONST      转到状态 89
    INTEGER_D      转到状态 65
    UnaryExp       转到状态 66
    MulExp         转到状态 67
    AddExp         转到状态 68


State 53

   50 INT_CONST: INTEGER_H .

    $default  reduce using rule 50 (INT_CONST)


State 54

   54 INTEGER_D: INTEGER_DP .

    $default  reduce using rule 54 (INTEGER_D)


State 55

   55 INTEGER_D: INTEGER_DN .

    $default  reduce using rule 55 (INTEGER_D)


State 56

   52 INT_CONST: INTEGER_O .

    $default  reduce using rule 52 (INT_CONST)


State 57

   53 INT_CONST: INTEGER_B .

    $default  reduce using rule 53 (INT_CONST)


State 58

   13 Var_Def: ID ASSIGN Init_Val .

    $default  reduce using rule 13 (Var_Def)


State 59

   47 LVal: ID .

    $default  reduce using rule 47 (LVal)


State 60

   56 UnaryExp: PrimaryExp .

    $default  reduce using rule 56 (UnaryExp)


State 61

   45 PrimaryExp: LVal .

    $default  reduce using rule 45 (PrimaryExp)


State 62

   46 PrimaryExp: NUMBER .

    $default  reduce using rule 46 (PrimaryExp)


State 63

   15 Init_Val: Exp .

    $default  reduce using rule 15 (Init_Val)


State 64

   48 NUMBER: INT_CONST .

    $default  reduce using rule 48 (NUMBER)


State 65

   51 INT_CONST: INTEGER_D .

    $default  reduce using rule 51 (INT_CONST)


State 66

   60 MulExp: UnaryExp .

    $default  reduce using rule 60 (MulExp)


State 67

   61 MulExp: MulExp . MUL UnaryExp
   62       | MulExp . DIV UnaryExp
   63       | MulExp . MOD UnaryExp
   64 AddExp: MulExp .

    MUL  shift, and go to state 90
    DIV  shift, and go to state 91
    MOD  shift, and go to state 92

    $default  reduce using rule 64 (AddExp)


State 68

   49 Exp: AddExp .
   65 AddExp: AddExp . ADD MulExp
   66       | AddExp . SUB MulExp

    ADD  shift, and go to state 93
    SUB  shift, and go to state 94

    $default  reduce using rule 49 (Exp)


State 69

   25 ID_ARRAY_NAME: IDENTIFIER LMPAREN INTEGER_DP RMPAREN .

    $default  reduce using rule 25 (ID_ARRAY_NAME)


State 70

   37 Block: LBRACE . Block_Item RBRACE

    T_INT       shift, and go to state 17
    T_CHAR      shift, and go to state 2
    CONST       shift, and go to state 4
    LBRACE      shift, and go to state 70
    IDENTIFIER  shift, and go to state 11

    Decl             转到状态 95
    Const_Decl       转到状态 7
    Var_Decl         转到状态 8
    ID               转到状态 59
    ID_ARRAY_NAME    转到状态 14
    BType            转到状态 9
    Block            转到状态 96
    Block_Item       转到状态 97
    base_Block_Item  转到状态 98
    Stmt             转到状态 99
    LVal             转到状态 100


State 71

   31 Func_Def: T_INT MAIN LPAREN RPAREN Block .

    $default  reduce using rule 31 (Func_Def)


State 72

   36 Func_Param: BType ID .

    $default  reduce using rule 36 (Func_Param)


State 73

   34 Func_Params: Func_Params COMMA . Func_Param

    T_INT   shift, and go to state 17
    T_CHAR  shift, and go to state 2

    BType       转到状态 41
    Func_Param  转到状态 101


State 74

   29 Func_Def: T_INT ID LPAREN Func_Params RPAREN . Block

    LBRACE  shift, and go to state 70

    Block  转到状态 102


State 75

   26 ID_ARRAY_NAME: ID_ARRAY_NAME LMPAREN INTEGER_DP RMPAREN .

    $default  reduce using rule 26 (ID_ARRAY_NAME)


State 76

   32 Func_Def: T_VOID MAIN LPAREN RPAREN Block .

    $default  reduce using rule 32 (Func_Def)


State 77

   30 Func_Def: T_VOID ID LPAREN Func_Params RPAREN . Block

    LBRACE  shift, and go to state 70

    Block  转到状态 103


State 78

   10 Const_Def: ID ASSIGN STRING .

    $default  reduce using rule 10 (Const_Def)


State 79

    9 Const_Def: ID ASSIGN NUMBER .

    $default  reduce using rule 9 (Const_Def)


State 80

   59 UnaryExp: NOT UnaryExp .

    $default  reduce using rule 59 (UnaryExp)


State 81

   57 UnaryExp: ADD UnaryExp .

    $default  reduce using rule 57 (UnaryExp)


State 82

   58 UnaryExp: SUB UnaryExp .

    $default  reduce using rule 58 (UnaryExp)


State 83

   44 PrimaryExp: LPAREN Exp . RPAREN

    RPAREN  shift, and go to state 104


State 84

   20 arr_ele: CHAR .

    $default  reduce using rule 20 (arr_ele)


State 85

   21 arr_ele: STRING .

    $default  reduce using rule 21 (arr_ele)


State 86

   22 arr_ele: Init_Val .

    $default  reduce using rule 22 (arr_ele)


State 87

   16 Init_Val: LBRACE arr_element . RBRACE
   18 arr_element: arr_element . COMMA arr_ele

    COMMA   shift, and go to state 105
    RBRACE  shift, and go to state 106


State 88

   17 arr_element: arr_ele .

    $default  reduce using rule 17 (arr_element)


State 89

   19 arr_ele: INT_CONST .
   48 NUMBER: INT_CONST .

    COMMA     reduce using rule 19 (arr_ele)
    COMMA     [reduce using rule 48 (NUMBER)]
    RBRACE    reduce using rule 19 (arr_ele)
    RBRACE    [reduce using rule 48 (NUMBER)]
    $default  reduce using rule 48 (NUMBER)


State 90

   61 MulExp: MulExp MUL . UnaryExp

    NOT         shift, and go to state 48
    ADD         shift, and go to state 49
    SUB         shift, and go to state 50
    LPAREN      shift, and go to state 51
    IDENTIFIER  shift, and go to state 11
    INTEGER_H   shift, and go to state 53
    INTEGER_DP  shift, and go to state 54
    INTEGER_DN  shift, and go to state 55
    INTEGER_O   shift, and go to state 56
    INTEGER_B   shift, and go to state 57

    ID             转到状态 59
    ID_ARRAY_NAME  转到状态 14
    PrimaryExp     转到状态 60
    LVal           转到状态 61
    NUMBER         转到状态 62
    INT_CONST      转到状态 64
    INTEGER_D      转到状态 65
    UnaryExp       转到状态 107


State 91

   62 MulExp: MulExp DIV . UnaryExp

    NOT         shift, and go to state 48
    ADD         shift, and go to state 49
    SUB         shift, and go to state 50
    LPAREN      shift, and go to state 51
    IDENTIFIER  shift, and go to state 11
    INTEGER_H   shift, and go to state 53
    INTEGER_DP  shift, and go to state 54
    INTEGER_DN  shift, and go to state 55
    INTEGER_O   shift, and go to state 56
    INTEGER_B   shift, and go to state 57

    ID             转到状态 59
    ID_ARRAY_NAME  转到状态 14
    PrimaryExp     转到状态 60
    LVal           转到状态 61
    NUMBER         转到状态 62
    INT_CONST      转到状态 64
    INTEGER_D      转到状态 65
    UnaryExp       转到状态 108


State 92

   63 MulExp: MulExp MOD . UnaryExp

    NOT         shift, and go to state 48
    ADD         shift, and go to state 49
    SUB         shift, and go to state 50
    LPAREN      shift, and go to state 51
    IDENTIFIER  shift, and go to state 11
    INTEGER_H   shift, and go to state 53
    INTEGER_DP  shift, and go to state 54
    INTEGER_DN  shift, and go to state 55
    INTEGER_O   shift, and go to state 56
    INTEGER_B   shift, and go to state 57

    ID             转到状态 59
    ID_ARRAY_NAME  转到状态 14
    PrimaryExp     转到状态 60
    LVal           转到状态 61
    NUMBER         转到状态 62
    INT_CONST      转到状态 64
    INTEGER_D      转到状态 65
    UnaryExp       转到状态 109


State 93

   65 AddExp: AddExp ADD . MulExp

    NOT         shift, and go to state 48
    ADD         shift, and go to state 49
    SUB         shift, and go to state 50
    LPAREN      shift, and go to state 51
    IDENTIFIER  shift, and go to state 11
    INTEGER_H   shift, and go to state 53
    INTEGER_DP  shift, and go to state 54
    INTEGER_DN  shift, and go to state 55
    INTEGER_O   shift, and go to state 56
    INTEGER_B   shift, and go to state 57

    ID             转到状态 59
    ID_ARRAY_NAME  转到状态 14
    PrimaryExp     转到状态 60
    LVal           转到状态 61
    NUMBER         转到状态 62
    INT_CONST      转到状态 64
    INTEGER_D      转到状态 65
    UnaryExp       转到状态 66
    MulExp         转到状态 110


State 94

   66 AddExp: AddExp SUB . MulExp

    NOT         shift, and go to state 48
    ADD         shift, and go to state 49
    SUB         shift, and go to state 50
    LPAREN      shift, and go to state 51
    IDENTIFIER  shift, and go to state 11
    INTEGER_H   shift, and go to state 53
    INTEGER_DP  shift, and go to state 54
    INTEGER_DN  shift, and go to state 55
    INTEGER_O   shift, and go to state 56
    INTEGER_B   shift, and go to state 57

    ID             转到状态 59
    ID_ARRAY_NAME  转到状态 14
    PrimaryExp     转到状态 60
    LVal           转到状态 61
    NUMBER         转到状态 62
    INT_CONST      转到状态 64
    INTEGER_D      转到状态 65
    UnaryExp       转到状态 66
    MulExp         转到状态 111


State 95

   40 base_Block_Item: Decl .

    $default  reduce using rule 40 (base_Block_Item)


State 96

   43 Stmt: Block .

    $default  reduce using rule 43 (Stmt)


State 97

   37 Block: LBRACE Block_Item . RBRACE
   39 Block_Item: Block_Item . base_Block_Item

    T_INT       shift, and go to state 17
    T_CHAR      shift, and go to state 2
    CONST       shift, and go to state 4
    LBRACE      shift, and go to state 70
    RBRACE      shift, and go to state 112
    IDENTIFIER  shift, and go to state 11

    Decl             转到状态 95
    Const_Decl       转到状态 7
    Var_Decl         转到状态 8
    ID               转到状态 59
    ID_ARRAY_NAME    转到状态 14
    BType            转到状态 9
    Block            转到状态 96
    base_Block_Item  转到状态 113
    Stmt             转到状态 99
    LVal             转到状态 100


State 98

   38 Block_Item: base_Block_Item .

    $default  reduce using rule 38 (Block_Item)


State 99

   41 base_Block_Item: Stmt .

    $default  reduce using rule 41 (base_Block_Item)


State 100

   42 Stmt: LVal . ASSIGN Exp

    ASSIGN  shift, and go to state 114


State 101

   34 Func_Params: Func_Params COMMA Func_Param .

    $default  reduce using rule 34 (Func_Params)


State 102

   29 Func_Def: T_INT ID LPAREN Func_Params RPAREN Block .

    $default  reduce using rule 29 (Func_Def)


State 103

   30 Func_Def: T_VOID ID LPAREN Func_Params RPAREN Block .

    $default  reduce using rule 30 (Func_Def)


State 104

   44 PrimaryExp: LPAREN Exp RPAREN .

    $default  reduce using rule 44 (PrimaryExp)


State 105

   18 arr_element: arr_element COMMA . arr_ele

    NOT         shift, and go to state 48
    ADD         shift, and go to state 49
    SUB         shift, and go to state 50
    LPAREN      shift, and go to state 51
    LBRACE      shift, and go to state 52
    IDENTIFIER  shift, and go to state 11
    INTEGER_H   shift, and go to state 53
    INTEGER_DP  shift, and go to state 54
    INTEGER_DN  shift, and go to state 55
    INTEGER_O   shift, and go to state 56
    INTEGER_B   shift, and go to state 57
    CHAR        shift, and go to state 84
    STRING      shift, and go to state 85

    Init_Val       转到状态 86
    arr_ele        转到状态 115
    ID             转到状态 59
    ID_ARRAY_NAME  转到状态 14
    PrimaryExp     转到状态 60
    LVal           转到状态 61
    NUMBER         转到状态 62
    Exp            转到状态 63
    INT_CONST      转到状态 89
    INTEGER_D      转到状态 65
    UnaryExp       转到状态 66
    MulExp         转到状态 67
    AddExp         转到状态 68


State 106

   16 Init_Val: LBRACE arr_element RBRACE .

    $default  reduce using rule 16 (Init_Val)


State 107

   61 MulExp: MulExp MUL UnaryExp .

    $default  reduce using rule 61 (MulExp)


State 108

   62 MulExp: MulExp DIV UnaryExp .

    $default  reduce using rule 62 (MulExp)


State 109

   63 MulExp: MulExp MOD UnaryExp .

    $default  reduce using rule 63 (MulExp)


State 110

   61 MulExp: MulExp . MUL UnaryExp
   62       | MulExp . DIV UnaryExp
   63       | MulExp . MOD UnaryExp
   65 AddExp: AddExp ADD MulExp .

    MUL  shift, and go to state 90
    DIV  shift, and go to state 91
    MOD  shift, and go to state 92

    $default  reduce using rule 65 (AddExp)


State 111

   61 MulExp: MulExp . MUL UnaryExp
   62       | MulExp . DIV UnaryExp
   63       | MulExp . MOD UnaryExp
   66 AddExp: AddExp SUB MulExp .

    MUL  shift, and go to state 90
    DIV  shift, and go to state 91
    MOD  shift, and go to state 92

    $default  reduce using rule 66 (AddExp)


State 112

   37 Block: LBRACE Block_Item RBRACE .

    $default  reduce using rule 37 (Block)


State 113

   39 Block_Item: Block_Item base_Block_Item .

    $default  reduce using rule 39 (Block_Item)


State 114

   42 Stmt: LVal ASSIGN . Exp
